# rust-powered-vim-snippets

./: Cargo.toml
src/: lib.rs
