[package]
name = "rust-powered-vim-snippets-lib"
version = "0.1.0"
authors = ["SWAMINATHAN Gurukandhamoorthi <ds.gurukandhamoorthi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustsnippetsutils"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5.0"
features = ["extension-module"]
